{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 48,
  "lineage": "fbe14fa6-b9dc-aad8-0f9b-d30d20c92025",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Nat-Gateway-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0350d38bc456376e0",
            "domain": "vpc",
            "id": "eipalloc-0350d38bc456376e0",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-241-121-214.us-west-1.compute.amazonaws.com",
            "public_ip": "54.241.121.214",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ElasticIP"
            },
            "tags_all": {
              "Name": "ElasticIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.Public-Subnet-RT",
            "aws_route_table_association.RT-IG-Association",
            "aws_subnet.public",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cbd40f694b804622",
            "arn": "arn:aws:ec2:us-west-1:423151161036:instance/i-03ad489e2ff058d6f",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03ad489e2ff058d6f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "webserver",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00c3e73c1f9c00f48",
            "private_dns": "ip-192-168-2-5.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.2.5",
            "public_dns": "ec2-52-53-230-55.us-west-1.compute.amazonaws.com",
            "public_ip": "52.53.230.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bcfc03fac863c5ee",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c3bb99d8433bcea9",
            "tags": {
              "Name": "web-server-1",
              "Owner": "iam",
              "Progect": "lab-task"
            },
            "tags_all": {
              "Name": "web-server-1",
              "Owner": "iam",
              "Progect": "lab-task"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d05db9951cb2f96f"
            ]
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.custom",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Internet_Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:423151161036:internet-gateway/igw-02c71b6ff00c51133",
            "id": "igw-02c71b6ff00c51133",
            "owner_id": "423151161036",
            "tags": {
              "Name": "Internet-Gateway"
            },
            "tags_all": {
              "Name": "Internet-Gateway"
            },
            "vpc_id": "vpc-039d2eed7d0eacf80"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg-labs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:423151161036:targetgroup/target-labs/875c999e5e8b9e7d",
            "arn_suffix": "targetgroup/target-labs/875c999e5e8b9e7d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:423151161036:targetgroup/target-labs/875c999e5e8b9e7d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "target-labs",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-039d2eed7d0eacf80"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_GATEWAY",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0350d38bc456376e0",
            "association_id": "eipassoc-0c0c206693bf9b42a",
            "connectivity_type": "public",
            "id": "nat-01d0173931dca7a07",
            "network_interface_id": "eni-08041dc481abb09c7",
            "private_ip": "192.168.2.82",
            "public_ip": "54.241.121.214",
            "subnet_id": "subnet-0c3bb99d8433bcea9",
            "tags": {
              "Name": "Nat-Gateway"
            },
            "tags_all": {
              "Name": "Nat-Gateway"
            }
          },
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP",
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.Public-Subnet-RT",
            "aws_route_table_association.RT-IG-Association",
            "aws_subnet.public",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public-Subnet-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:423151161036:route-table/rtb-0056534e56d202e6c",
            "id": "rtb-0056534e56d202e6c",
            "owner_id": "423151161036",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02c71b6ff00c51133",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for Internet Gateway"
            },
            "tags_all": {
              "Name": "Route Table for Internet Gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-039d2eed7d0eacf80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_subnet.public",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-IG-Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078096ac8e0d1c8b1",
            "route_table_id": "rtb-0056534e56d202e6c",
            "subnet_id": "subnet-0c3bb99d8433bcea9"
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.Public-Subnet-RT",
            "aws_subnet.public",
            "aws_vpc.custom"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07da708fde3a97cc0",
            "route_table_id": "rtb-0056534e56d202e6c",
            "subnet_id": "subnet-01196085107320e93"
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.Public-Subnet-RT",
            "aws_subnet.public",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:423151161036:security-group/sg-03bb4bb7e98080d33",
            "description": "HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "output from webserver",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03bb4bb7e98080d33",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-group",
            "name_prefix": "",
            "owner_id": "423151161036",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-039d2eed7d0eacf80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:423151161036:security-group/sg-0d05db9951cb2f96f",
            "description": "HTTP, HTTPS, SSH, DB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "output from webserver",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d05db9951cb2f96f",
            "ingress": [
              {
                "cidr_blocks": [
                  "89.77.142.25/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP for web",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03bb4bb7e98080d33"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-security-group",
            "name_prefix": "",
            "owner_id": "423151161036",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-039d2eed7d0eacf80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_subnet.public",
            "aws_vpc.custom",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:423151161036:subnet/subnet-0c3bb99d8433bcea9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3bb99d8433bcea9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "423151161036",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-west-1a - Public Subnet"
            },
            "tags_all": {
              "Name": "us-west-1a - Public Subnet"
            },
            "vpc_id": "vpc-039d2eed7d0eacf80"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:423151161036:subnet/subnet-01196085107320e93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01196085107320e93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "423151161036",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-west-1c - Public Subnet"
            },
            "tags_all": {
              "Name": "us-west-1c - Public Subnet"
            },
            "vpc_id": "vpc-039d2eed7d0eacf80"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:423151161036:vpc/vpc-039d2eed7d0eacf80",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0cb9c81173a2dd132",
            "default_route_table_id": "rtb-0c5b54054a2b40a5d",
            "default_security_group_id": "sg-040c04d4ff41362bc",
            "dhcp_options_id": "dopt-09057a17adf1f4cb0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-039d2eed7d0eacf80",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c5b54054a2b40a5d",
            "owner_id": "423151161036",
            "tags": {
              "Name": "custom"
            },
            "tags_all": {
              "Name": "custom"
            }
          }
        }
      ]
    }
  ]
}